--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.simple</groupId>
-	<artifactId>simpleApp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>simpleapp</artifactId>
+	<version>0.0.1-snapshot</version>
 	<name>simpleApp</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -34,6 +35,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+				<image>
+				<name>kamalesreekanth123/mmv2-${project.version}</name>
+				</image>
+				<pullpolicy>IF_NOT_PRESENT</pullpolicy>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
