--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,24 @@
 	<name>simpleApp</name>
 	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
+	<repositories>
+	<repository>
+      <releases>
+        <enabled>false</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+        <checksumPolicy>fail</checksumPolicy>
+      </snapshots>
+      <name>simpleApp</name>
+      <id>snapshots-repo</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <layout>default</layout>
+    </repository>
+	</repositories>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
